# QuickBite-Admin

./: LICENSE  README.md  pyproject.toml
views/: temp_window.py
